tests/resource/valid/function/calls.mamba
def fun_a() => print("hello world")
def fun_b(x: Int) => print("hello {x}")

fun_a()
fun_b(123)
