tests/resource/invalid/type/control_flow/if_not_bool_union.mamba
def x: {Slice, Range} := 0::1

if x then print "hello world"
